--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ body{
     overflow:hidden;
     text-align:center;
 }
-#myCanvas{
+#carCanvas{
     background:lightgray;
+}
+
+#networkCanvas{
+    /* background: #202020; */
+    background: black;
 }
