--- a/style.css
+++ b/style.css
@@ -3,8 +3,29 @@ body{
     margin:0;
     background:darkgray;
     overflow:hidden;
-    text-align:center;
+    /*text-align:center;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+#verticalButtons {
+    display: flex;
+    flex-direction: column;
+}
+
+button {
+    border: none;
+    border-radius: 5px;
+    padding: 5px 5px 7px 5px;
+    margin: 2px;
+    cursor: pointer;
+}
+
+button:hover {
+    background: blue;
+}
+
 #carCanvas{
     background:lightgray;
 }
@@ -13,3 +34,4 @@ body{
     /* background: #202020; */
     background: black;
 }
+
